fix: loading spinner is uncovered if scroll

--- a/src/shared/components/UIElements/LoadingSpinner/LoadingSpinner.scss
+++ b/src/shared/components/UIElements/LoadingSpinner/LoadingSpinner.scss
@@ -56,7 +56,7 @@
 .overlay {
   height: 100%;
   width: 100%;
-  position: absolute;
+  position: fixed;
   z-index: 350;
   top: 0;
   left: 0;
